[package]
name = "rs-flasher"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[[bin]]
name = "rs-flasher"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
espflash = "2.1.0"
miette = { version = "5.10.0", features = ["fancy"] }
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.115"
chrono = "0.4.35"