SET(SOURCES components/ui_comp_label2.c
    components/ui_comp.c
    screens/ui_ScreenMainGif.c
    screens/ui_ScreenWelcome.c
    screens/ui_ScreenWIFIConnecting.c
    screens/ui_ScreenWIFIDisconnect.c
    screens/ui_ScreenExtrude.c
    screens/ui_ScreenMove.c
    screens/ui_ScreenTemp.c
    screens/ui_ScreenSetTemp.c
    screens/ui_ScreenSetExtrude.c
    screens/ui_ScreenPrinting.c
    screens/ui_ScreenHeatingNozzle.c
    screens/ui_ScreenHeatingBed.c
    screens/ui_ScreenRoller.c
    screens/ui_ScreenQRCode.c
    screens/ui_ScreenBacklight.c
    screens/ui_ScreenDialog.c
    screens/ui_ScreenPopup.c
    screens/ui_ScreenColorWheel.c
    screens/ui_ScreenInfo.c
    screens/ui_ScreenTestImg.c
    screens/ui_ScreenTestSensor.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_logo_png.c
    images/ui_img_wifi_disconnect_png.c
    images/ui_img_bg_png.c
    images/ui_img_btn_rec_png.c
    images/ui_img_sta_temp_png.c
    images/ui_img_nozzle_png.c
    images/ui_img_sta_extrude_png.c
    images/ui_img_btn_move_png.c
    images/ui_img_abl_png.c
    images/ui_img_qgl_png.c
    images/ui_img_home_png.c
    images/ui_img_bed_png.c
    images/ui_img_dial_png.c
    images/ui_img_btn_dialog_png.c
    images/ui_img_img_ok_png.c
    images/ui_img_acc_png.c
    images/ui_img_nozzle_gray_png.c
    images/ui_img_nozzle_red_png.c
    images/ui_img_bed_gray_png.c
    images/ui_img_bed_red_png.c
    images/ui_img_roller_rec_mid_png.c
    images/ui_img_roller_rec_right_png.c
    images/ui_img_roller_rec_left_png.c
    images/ui_img_slider_backlight_png.c
    images/ui_img_backlight_png.c
    images/ui_img_btn_cancel_png.c
    images/ui_img_popup_png.c
    images/ui_img_test_png.c
    fonts/ui_font_InterSeimiBold32.c
    fonts/ui_font_InterSemiBold14.c
    fonts/ui_font_InterSemiBold16.c
    fonts/ui_font_InterSemiBold18.c
    fonts/ui_font_InterSemiBold20.c
    fonts/ui_font_InterSemiBold24.c
    fonts/ui_font_InterSemiBold48.c)

add_library(ui ${SOURCES})
